--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline{
         }
         post{
           always{
-            emailext body: 'nothing imp', subject: 'build fail', to: 'vikashyadava51@gmail.com'
+           echo "hello worl"
         }
       }
     }
